# termplayer

./: .gitignore  LICENSE  setup.cfg  setup.py
src/termplayer/: __main__.py  cache.py  cli.py  logger.py  play_list.py  player.py  repl.py
